--- a/.gitignore
+++ b/.gitignore
@@ -13,7 +13,7 @@
 /.vs
 /Ecommerce.Shared/bin
 /Ecommerce.Shared/obj
-/Ecommerce.UI/bin/Debug/netstandard2.0
+/Ecommerce.UI/bin
 /Ecommerce.UI/obj
-/IdentityServer/bin/Debug/netcoreapp3.0
+/IdentityServer/bin
 /IdentityServer/obj
